<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <View
            android:id="@+id/card_info_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_300"
            android:layout_marginLeft="96dp"
            android:layout_marginRight="96dp"
            android:layout_centerInParent="true"/>


    <com.vinaygaba.creditcardview.CreditCardView
            android:id="@+id/card_preview"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:background="@drawable/cardbackground_plain"
            android:layout_above="@id/card_info_divider"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            app:isEditable="false"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_below="@id/card_info_divider"
            android:orientation="vertical"
            android:background="@color/grey_200">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_info_id_label"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/card_info_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_info_type_label"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/card_info_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_info_application_label"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/card_info_application"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_info_proto_label"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/card_info_protocol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_info_rf_label"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/card_info_rf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_info_manufacturer"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/card_info_manu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>